Add adminscores page, add flags, add csv to import games from prelim round

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,14 @@
 body {
   font-family: system-ui, sans-serif;
 }
+
+/* Tailwind + custom class */
+.no-arrows::-webkit-outer-spin-button,
+.no-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.no-arrows[type='number'] {
+  -moz-appearance: textfield; /* Firefox */
+}
